--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>tiago</title>
 	<link rel="icon" href="">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/font-style.css"/>
 </head>
 <body>
-  <h1>tiago</h1>
+<!-- Navigation -->
+  <header>
+    <nav>
+      <div id="navigation">
+        <div class="wordmark"><a href="#" alt="Tiago wordmark. Click to go home.">tiago</a></div>
+        <input type="checkbox" id="menu-tgl">
+        <label for="menu-tgl" class="menu-icn">Menu</i></label>
+        <ul class="menu">
+          <li><a href="#" alt="About">About</a></li>
+          <li><a href="#" alt="Workflow">Workflow</a></li>
+          <li><a href="#" alt="Work">Work</a></li>
+          <li><a href="#" alt="Contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
 </body>
 </html>
