--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>tiago</title>
 	<link rel="icon" href="">
   <link rel="stylesheet" href="css/style.css"/>
-  <link rel="stylesheet" href="css/font-style.css"/>
+  <link rel="stylesheet" href="css/fonts.css"/>
 </head>
 <body>
 <!-- Navigation -->
