--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
       <div id="navigation">
         <div class="wordmark"><a href="#" alt="Tiago wordmark. Click to go home.">tiago</a></div>
         <input type="checkbox" id="menu-tgl">
-        <label for="menu-tgl" class="menu-icn">Menu</i></label>
+        <label for="menu-tgl" class="menu-icn"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M15 12C15 15.3137 12.3137 18 9 18C5.68629 18 3 15.3137 3 12C3 8.68629 5.68629 6 9 6C12.3137 6 15 8.68629 15 12Z" fill="hsla(0, 0%, 32%, 1)"/>
+        <path d="M3 21C3 21.7879 3.15519 22.5681 3.45672 23.2961C3.75825 24.0241 4.20021 24.6855 4.75736 25.2426C5.31451 25.7998 5.97595 26.2417 6.7039 26.5433C7.43185 26.8448 8.21207 27 9 27C9.78793 27 10.5681 26.8448 11.2961 26.5433C12.0241 26.2417 12.6855 25.7998 13.2426 25.2426C13.7998 24.6855 14.2417 24.0241 14.5433 23.2961C14.8448 22.5681 15 21.7879 15 21L3 21Z" fill="hsla(0, 0%, 32%, 1)"/>
+        <path d="M29 12C29 15.3137 26.3137 18 23 18C19.6863 18 17 15.3137 17 12C17 8.68629 19.6863 6 23 6C26.3137 6 29 8.68629 29 12Z" fill="hsla(0, 0%, 32%, 1)"/>
+        </svg></label>
         <ul class="menu">
           <li><a href="#" alt="About">About</a></li>
           <li><a href="#" alt="Workflow">Workflow</a></li>
