--- a/index.html
+++ b/index.html
@@ -28,18 +28,16 @@
       </div>
     </nav>
   </header>
-  <section>
-    <div class"expressiveSuperheadline">Expressive Superheadline</div>
-    <div class"displaySuperheadline">Display Superheadline</div>
-    <div class"expressiveHeadline">Expressive Headline</div>
-    <div class"displayHeadline">Display Headline</div>
-    <div class"expressiveSubheadline">Expressive Subheadline</div>
-    <div class"displaySubheadline">Display Subheadline</div>
-    <div class"miniheadline">Miniheadline</div>
-    <div class"blockquote">Blockquote</div>
-    <div class"body">Body</div>
-    <div class"overline">Overline</div>
-    <div class"caption">Caption</div>
-  </section>
+    <div class="expressiveSuperheadline">Expressive Superheadline</div>
+    <div class="displaySuperheadline">Display Superheadline</div>
+    <div class="expressiveHeadline">Expressive Headline</div>
+    <div class="displayHeadline">Display Headline</div>
+    <div class="expressiveSubheadline">Expressive Subheadline</div>
+    <div class="displaySubheadline">Display Subheadline</div>
+    <div class="miniheadline">Miniheadline</div>
+    <div class="blockquote">Blockquote</div>
+    <div class="body">Body</div>
+    <div class="overline">Overline</div>
+    <div class="caption">Caption</div>
 </body>
 </html>
