--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>tiago</title>
 	<link rel="icon" href="">
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <!-- Navigation -->
@@ -28,8 +28,8 @@
       </div>
     </nav>
   </header>
-    <div class="expressiveSuperheadline">Expressive Superheadline</div>
-    <div class="displaySuperheadline">Display Superheadline</div>
+    <div class="expressiveSuperheadline">Expressive Super&shy;headline</div>
+    <div class="displaySuperheadline">Display Super&shy;headline</div>
     <div class="expressiveHeadline">Expressive Headline</div>
     <div class="displayHeadline">Display Headline</div>
     <div class="expressiveSubheadline">Expressive Subheadline</div>
