--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
           <h3 class="title">Redesigning Google Chrome's bookmarks and reading list features</h3>
           <a class="button" href="#">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M2 12H21M21 12L11 2M21 12L11 22"/>
+              <path d="M11 2L21 12L11 22"/>
+              <path d="M2 12H21"/>
             </svg>
           </a>
         </div>
@@ -29,7 +30,8 @@
           <h3 class="title">Redesigning Google Chrome's bookmarks and reading list features</h3>
           <a class="button" href="#">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M2 12H21M21 12L11 2M21 12L11 22"/>
+              <path d="M11 2L21 12L11 22"/>
+              <path d="M2 12H21"/>
             </svg>
           </a>
         </div>
@@ -40,7 +42,8 @@
           <h3 class="title">Redesigning Google Chrome's bookmarks and reading list features</h3>
           <a class="button" href="#">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M2 12H21M21 12L11 2M21 12L11 22"/>
+              <path d="M11 2L21 12L11 22"/>
+              <path d="M2 12H21"/>
             </svg>
           </a>
         </div>
@@ -51,7 +54,20 @@
           <h3 class="title">Redesigning Google Chrome's bookmarks and reading list features</h3>
           <a class="button" href="#">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M2 12H21M21 12L11 2M21 12L11 22"/>
+              <path d="M11 2L21 12L11 22"/>
+              <path d="M2 12H21"/>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <div class="bg-card" style="background-image: url('images/card01.jpg');">
+        <div class="content">
+          <div class="overline">Digital</div>
+          <h3 class="title">Redesigning Google Chrome's bookmarks and reading list features</h3>
+          <a class="button" href="#">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11 2L21 12L11 22"/>
+              <path d="M2 12H21"/>
             </svg>
           </a>
         </div>
